# atsamx7x-hal

./: Cargo.toml  LICENSE  README.md
.cargo/: config
.github/: FUNDING.yml
examples/: blink_hello_world.rs
src/: ebi.rs  gpio.rs  lib.rs  mpu.rs  sdram.rs  smc.rs  time.rs
